# Isolation

./: .gitignore  .gitignore.bak  .gitmodules  CMakeLists.txt  build.ps1  build.sh  compile_commands.json
res/models/: Apartment_1.0.gltf  Computer.gltf  test_cube.mtl
src/: billboard.cpp  billboard.hpp  chonky_timer.hpp  debug.hpp  exception.hpp  main.cpp  node.cpp  node.hpp  node3D.cpp  node3D.hpp  object.cpp  object.hpp  resman.hpp  resman_static.hpp  scene.hpp  transform.cpp  transform.hpp  transform3D.cpp  transform3D.hpp
